Add some missing sections endpoints
