# app/controllers/Application.scala
@@ -369,6 +369,7 @@ class Application @Inject()(files: FileService, collections: CollectionService, 
         api.routes.javascript.Files.unfollow,
         api.routes.javascript.Files.getTechnicalMetadataJSON,
         api.routes.javascript.Files.filePreviewsList,
+        api.routes.javascript.Files.getSections,
         api.routes.javascript.Files.updateMetadata,
         api.routes.javascript.Files.addMetadata,
         api.routes.javascript.Files.getMetadataDefinitions,
@@ -382,7 +383,9 @@ class Application @Inject()(files: FileService, collections: CollectionService, 
         api.routes.javascript.Search.search,
         api.routes.javascript.Search.searchJson,
         api.routes.javascript.Sections.add,
+        api.routes.javascript.Sections.get,
         api.routes.javascript.Sections.delete,
+        api.routes.javascript.Sections.description,
         api.routes.javascript.Sections.comment,
         api.routes.javascript.Sections.getTags,
         api.routes.javascript.Sections.addTags,
